snake/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snake
  namespace: leliamm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: snake
  template:
    metadata:
      labels:
        app: snake
    spec:
      containers:
        - name: snake
          image: spkane/snake-game
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              memory: 256Mi
