snake/http-route.yaml
# http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: snake
  namespace: leliamm
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - snake-leliamm.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: snake
          port: 80
